src/scss/_base.scss
// Base

* {
  box-sizing: border-box;
  -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
}

html {
  height: 100%;
}

body {
  padding: 0;
  margin: 0;
  color: var(--base-txt-color);
  font-family: var(--base-font-family);
  font-weight: 300;
  background: var(--page-body-bg);
  min-height: 100vh;
  display: flex;
  flex-direction: column;
}

.loading {
  img {
    width: 30vw;
    margin: 4vw;
  }
}

.background {
  background-size: 2px;
}

// headings ------------
h1,
h2,
h3,
h5,
h6 {
  margin: 0 0 0.5em;
  color: var(--heading-color);
}

// links ---------------
a {
  color: var(--link-color);
}

a:hover {
  color: white;
}

// homepage ----------------------------------------------------------

.slides {
  position: absolute;
  transform: scale(0.9);
  opacity: 0.8;
  transition: all 0.5s ease-in-out;
  display: flex;
  margin-bottom: 0;
}

.content-box {
  position: relative;
  margin-bottom: 0vw;
}

.showing {
  z-index: 1;
 transform: none;
  opacity: 1;

}

.slider {
  height: 44em;
  overflow: hidden;
  margin-bottom: 4em;
  padding: 0;
}

#feature-box {
  background: var(--body-bg);
    padding: 0;
    margin: 2em 5em 0 5em;
}

.feature-txt-box {
  display: block;
  margin-top: 15%;
  margin-bottom: 0;
  text-align: center;
}

.feature-txt {
  max-width: 100%;
  padding: 2vw;
  margin: 0 auto;
}

.shop-now-btn {
  background: var(--brand-color);
  color: var(--page-body-bg);
  margin-top: 1vw;
  width: 8vw;
  height: 2vh;
  border-radius: 50px;
  padding: .5vw 2vw;
  margin-top: 0px;
  font-size: 1.2vw;
  cursor: pointer;
}

.shop-now-btn:hover {
  background-color: white;
  color: #e16a2f;
}


.feature-img {
  width: 50%;
  height: 50%;
  // margin-right: 50px;
  // margin-left: 0;
}

#feature-box-two {
  //background: #e5e1fc;
  background: var(--body-bg);
  
  //margin: 40px;
  //margin-top: 2em;
  padding: 0;
  margin: 2em 5em 0 5em;
}

.feature-txt-box-two {
  display: block;
  margin-top: 15%;
  //margin-left: 50px;
  margin-bottom: 0;
  text-align: center;
}

.feature-txt-two {
  max-width: 100%;
  padding: 2vw;
  margin: 0 auto;
}

.feature-img-two {
  width: 50%;
  height: 50%;
}

.feature-txt-three {
  max-width: 100%;
  padding: 2vw;
  margin: 0 auto;
}

.image-box {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  grid-template-rows: repeat(1, 1fr);
  grid-gap: 30px;
  padding: 0;
  //margin: 20px;
  //margin-top: 3em;
  //align-items: center;
  margin: 0 5em 2em 5em;

  img:hover {    
    transform: scale(1.1);
    -ms-transform: scale(0.5);
    /* IE 9 */
    -moz-transform: scale(0.5);
    /* Firefox */
    -webkit-transform: scale(1.1);
    /* Safari and Chrome */
    transition-duration: 500ms, 1s;
    transition-timing-function: ease-in-out;
  }
}

.home-img1 {
  max-width: 100%;
  grid-column-start: 1;
  grid-column-end: 2;
  grid-row-start: 1;
  grid-row-end: 2;
  padding: 0;
}

.home-img2 {
  max-width: 100%;
  grid-column-start: 2;
  grid-column-end: 3;
  grid-row-start: 1;
  grid-row-end: 2;
  //margin: 1em;
  padding: 0;
}

.home-img3 {
  max-width: 100%;
  grid-column-start: 3;
  grid-column-end: 4;
  grid-row-start: 1;
  grid-row-end: 2;
  //margin: 1em;
  padding: 0;
}

.home-img4 {
  max-width: 100%;
  grid-column-start: 4;
  grid-column-end: 5;
  grid-row-start: 1;
  grid-row-end: 2;
  //margin: 1em;
  padding: 0;
}

.blurb-box {
  background: var(--sl-color-primary-50);
  margin: 20px;
  margin-top: 3em;
  padding: 20px;
  text-align: center;
  margin: 2em 5em 2em 5em;
}

.blurb-txt-box {
  display: flex;
  width: 100%;
  padding-left: 10em;
  padding-right: 10em;
  padding-bottom: 3em;
  align-items: center;
 
}

.blurb-txt {
  font-size: large;
}

.blurb-img {
  width: 20%;
  padding: 0;
}

.insta {
  margin-top: 1em;
}

.home-img5 {
  max-width: 100%;
  margin: 0 auto;
  grid-column-start: 1;
  grid-column-end: 2;
  grid-row-start: 1;
  grid-row-end: 2;
  padding: 0;
}

.home-img6 {
  max-width: 100%;
  margin: 0 auto;
  grid-column-start: 2;
  grid-column-end: 3;
  grid-row-start: 1;
  grid-row-end: 2;
  padding: 0;
}

.home-img7 {
  max-width: 100%;
  margin: 0 auto;
  grid-column-start: 3;
  grid-column-end: 4;
  grid-row-start: 1;
  grid-row-end: 2;
  padding: 0;
}

.home-img8 {
  max-width: 100%;
  margin: 0 auto;
  grid-column-start: 4;
  grid-column-end: 5;
  grid-row-start: 1;
  grid-row-end: 2;
  padding: 0;
}



// app splash screen (loading) -------------------------------------------
.app-splash {
  position: fixed;
  background: #fff;
  color: #777;
  display: flex;
  left: 0;
  top: 0;
  right: 0;
  bottom: 0;
  align-items: center;
  justify-content: center;
  text-align: center;

  .app-logo {
    width: 180px;
    display: block;
    margin-bottom: 1em;
  }
}

// Generic setup styling -------------------------------------------------------------------------

// helper classes ---------
.calign {
  text-align: center;
}

.large-text {
  font-size: 1.6em;
}

.brand-color {
  color: var(--brand-color);
}

// generic-entry ----------------
.generic-entry {
  box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.07);
  border-radius: 5px;
  margin-bottom: 0.5em;
  padding: 1em;
  background: #fff;
}

// root --------------------------
#root {
  position: relative;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  overflow: hidden;
}

// page content ------------------

.app-logo-mob {
  width: 200px;
}

.page-content {
  position: relative;
  top: var(--app-header-height);
  left: 0;
  right: 0;
  bottom: var(--app-header-height);
  // overflow-y: scroll;
  padding: 1em;

  &.no-pad {
    padding: 0;
  }

  min-height: 80vh;
  margin-bottom: 10vh;
}

.page-content-post {
  position: relative;
  top: var(--app-header-height);
  left: 0;
  right: 0;
  bottom: 0;
  // overflow-y: scroll;
  padding: 1em;

  &.no-pad {
    padding: 0;
  }

  min-height: 80vh;
  margin-bottom: 10vh;
}

.page-centered {
  display: flex;
  align-items: center;
  justify-content: center;
}

.page-title {
  font-family: var(--body-font-family);
}
/* ... */

